# nongd-standalone

./: .gitmodules  CMakeLists.txt  README.md
src/: CustomSongWidget.cpp  CustomSongWidget.hpp  JsonManager.cpp  JsonManager.hpp  NongCell.cpp  NongCell.hpp  Nongd.cpp  Nongd.hpp  NongdLayer.cpp  NongdLayer.hpp  NongdPopup.cpp  NongdPopup.hpp  Popup.hpp  dllmain.cpp  includes.hpp
src/types/: SongInfo.hpp
